--- a/index.html
+++ b/index.html
@@ -5,17 +5,13 @@
     <title>Новое</title>
     <script src="libs/jquery/jquery.js"></script>
     <script src="libs/leaflet/leaflet.js"></script>
-
     <link rel="stylesheet" href="libs/leaflet/leaflet.css">
     <link rel="stylesheet" href="style.css"/>
-
-
     <script>
         // Глобальная переменная для карты
         var map, control;
         //Инициализируем пустой массив слоев
         var layers = new Array();
-
         // Вызываем загрузку конфигурационного файла карты
         loadJSON('mapconfig.json',
                 function (data) {
@@ -23,14 +19,10 @@
                     varmap(mps, 0, mps.length);
                 }
         );
-
         // Получаем параметры и рисуем карту
-
-        /**
-         * @param alldata - массив данных, полученных из файла настроек
+        /**@param alldata - массив данных, полученных из файла настроек
          * @param i - индекс нужного конфига в массиве
-         * @param l - длина массива (не знаю зачем)
-         */
+         * @param l - длина массива (не знаю зачем)*/
         function varmap(alldata, i, l) {
             var d = alldata[i];
             var center = d.center;
@@ -44,20 +36,15 @@
                 minZoom: minZoom,
                 maxZoom: maxZoom
             });
-
             //Получаем конфиг для слоев и вызываем функцию загрузки слоев
             loadJSON('layersconfig.json', function (data) {
                 loadLayers(data);
             });
         }
-
         /**
          * Пробегаем по массиву с настройками для слоя
          * В зависимости от типа слоя нужным видом инициализируем слой и отрисовываем его
-         *
-         * @param data - массив данных, полученных из файла настроек слоев
-         */
-
+         * @param data - массив данных, полученных из файла настроек слоев*/
         function loadLayers(data) {
             control = L.control.layers({}, {});
             control.addTo(map);
@@ -66,11 +53,9 @@
                 switch (value.layertypefunction) {
                     case "ltilelayer":
                         //Добавляем в массив слоев новый слой по индексу value.layercodename
-                        layers[value.layercodename] = L.tileLayer(value.pathto, {
-                            attribution: value.layername
-                        });
+                        layers[value.layercodename] = L.tileLayer(value.pathto, {});
                         //Отрисовываем слой
-                        layers[value.layercodename].addTo(map);
+                        layers[value.layercodename];
                         loadLayerControl(value);
                         break;
                     case "casual":
@@ -90,8 +75,6 @@
                 }
             });
         };
-
-
         function loadLayerControl(layer) {
             switch (layer.layertype) {
                 case "basemap":
@@ -107,13 +90,10 @@
                     break;
             }
         }
-
         /**
-         *
          * @param path - путь до файла конфига
          * @param success - функция (callback), которая вызовется при успешной загрузке файла
-         * @param error - функция (callback), которая вызовется при ошибке загрузки
-         */
+         * @param error - функция (callback), которая вызовется при ошибке загрузки*/
         function loadJSON(path, success, error) {
             var xhr = new XMLHttpRequest();
             xhr.onreadystatechange = function () {
@@ -121,7 +101,6 @@
                     if (xhr.status === 200) {
                         if (success)
                             success(JSON.parse(xhr.responseText));
-
                     } else {
                         if (error)
                             error(xhr);
@@ -131,34 +110,7 @@
             xhr.open("GET", path, true);
             xhr.send();
         }
-
-
-        function Bool(initialValue) {
-            var bool = !!initialValue;
-            var listeners = [];
-            var returnVal = function (value) {
-                if (arguments.length) {
-                    var oldValue = bool;
-                    bool = !!value;
-                    listeners.forEach(function (listener, i, list) {
-                        listener.call(returnVal, {oldValue: oldValue, newValue: bool});
-                    });
-                }
-                return bool
-            };
-            returnVal.addListener = function (fn) {
-                if (typeof fn == "function") {
-                    listeners.push(fn);
-                }
-                else {
-                    throw "Not a function!";
-                }
-            };
-            return returnVal;
-        }
     </script>
-
-
 </head>
 <body>
 <div id="map"></div>
